--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.25.3",
     "sequelize-cli": "^6.5.1"
   }
